# Image-captioning

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  ReadMe.MD  app.py  args.yaml  create_vocab.py  deploymentRequirement.txt  requirements.txt  run.cpp  summary.py  trace_model.py  train.py  vocab.json
.devcontainer/: devcontainer.json
extras/: add_captions.py  combine.py  conceptual_to_coco.py  makedataset.py
static/: SimpleImage.js  scp.js  styles.css
templates/: upload.html
utils/: dataloader.py  general.py  model.py  modules.py  process_image.py  tokenizer.py
